# Linalg

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: Matrix.hpp
include/Linalg/: Core.hpp  Matrix.hpp  Vector.hpp
include/linalg/: Core.h  Matrix.h  Vector.h
src/: Matrix.cc  Matrix.cpp  Vector.cc  Vector.cpp
test/: Matrix_test.cc  lapacke_test.cc
